fixed select tag on mobile

--- a/assets/css/_order.scss
+++ b/assets/css/_order.scss
@@ -101,6 +101,7 @@
     -webkit-appearance: none;
     background: transparent;
     text-align-last: center;
+    text-align: center;
     margin-left: auto;
     @include gradientClr();
 
