--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -433,6 +433,7 @@
   -webkit-appearance: none;
   background: transparent;
   text-align-last: center;
+  text-align: center;
   margin-left: auto;
   color: #d3436c;
   -webkit-background-clip: text;
